# mantra

./: .gitignore  Makefile.am  README  README.md  choice.scm  configure.ac  generator.scm  mantra  mantra.sh  plans.scm  rules.scm
mantra-libs/: generator.scm  main.scm  plans.scm  rules.scm
